<?xml version="1.0"?>
<package>
  <name>rqt_prove</name>
  <version>0.0.0</version>
  <description>rqt_prove package is a proving ground for development.
  </description>

  <maintainer email="isaito@todo.todo">isaito</maintainer>
  <license>BSD</license>

  <author>Isaac Saito</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  
  <run_depend>rqt_reconfigure</run_depend>

  <test_depend>unittest</test_depend>
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>